# app/Models/Project.php
@@ -26,4 +26,9 @@ class Project extends Model
     {
         return $this->belongsToMany(User::class);
     }
+
+    public function timesheets()
+    {
+        return $this->hasMany(Timesheet::class);
+    }
 }
